fix css issue coming from the scrollbar

--- a/app/src/components/CustomScrollArea/CustomScrollArea.css
+++ b/app/src/components/CustomScrollArea/CustomScrollArea.css
@@ -2,15 +2,10 @@
   position: relative;
   overflow-y: scroll;
   min-height: 100%;
-  perspective: 1px;
-  perspective-origin: top right;
-  transform-style: preserve-3d;
   scrollbar-width: none;
 }
 
 .perspective-container {
-  perspective-origin: top right;
-  transform-style: preserve-3d;
   width: 100%;
   height: 100%;
   position: relative;
@@ -19,7 +14,6 @@
 .custom-scrollbar-thumb {
   width: 8px;
   position: absolute;
-  transform-origin: top right;
   pointer-events: auto;
   z-index: 100;
   background: rgba(var(--color-primary-rgb), 0.5);
@@ -28,7 +22,7 @@
   transition:
     opacity 0.3s ease,
     background 0.2s ease;
-  will-change: transform, opacity;
+  will-change: opacity;
 }
 
 .custom-scrollbar-thumb--hidden {
